--- a/index.html
+++ b/index.html
@@ -96,81 +96,39 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <svg
-                        class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-                        width="800"
-                        height="400"
-                        xmlns="http://www.w3.org/2000/svg"
-                        role="img"
-                        aria-label="Placeholder: First slide"
-                        preserveAspectRatio="xMidYMid slice"
-                        focusable="false"
-                    >
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"></rect>
-                        <text x="50%" y="50%" fill="#555" dy=".3em">
-                            First slide
-                        </text>
-                    </svg>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>
-                            Some representative placeholder content for the
-                            first slide.
-                        </p>
-                    </div>
+                  <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner1-mobile.png"
+                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+                  <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner1-tablet.png"
+                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+                  <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner1-desktop.png"
+                    alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
                 </div>
-                <div class="carousel-item">
-                    <svg
-                        class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-                        width="800"
-                        height="400"
-                        xmlns="http://www.w3.org/2000/svg"
-                        role="img"
-                        aria-label="Placeholder: Second slide"
-                        preserveAspectRatio="xMidYMid slice"
-                        focusable="false"
-                    >
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#666"></rect>
-                        <text x="50%" y="50%" fill="#444" dy=".3em">
-                            Second slide
-                        </text>
-                    </svg>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>
-                            Some representative placeholder content for the
-                            second slide.
-                        </p>
-                    </div>
+                <div class="carousel-item position-relative">
+                  <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner2-mobile.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                  <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner2-tablet.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                  <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner2-desktop.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                  <div class="carousel-caption position-absolute posicao">
+                    <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
+                    <p class="fs-4">Estilo e qualidade para durar.</p>
+                  </div>
                 </div>
-                <div class="carousel-item">
-                    <svg
-                        class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-                        width="800"
-                        height="400"
-                        xmlns="http://www.w3.org/2000/svg"
-                        role="img"
-                        aria-label="Placeholder: Third slide"
-                        preserveAspectRatio="xMidYMid slice"
-                        focusable="false"
-                    >
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#555"></rect>
-                        <text x="50%" y="50%" fill="#333" dy=".3em">
-                            Third slide
-                        </text>
-                    </svg>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>
-                            Some representative placeholder content for the
-                            third slide.
-                        </p>
-                    </div>
+                <div class="carousel-item position-relative">
+                  <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner3-mobile.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                  <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner3-tablet.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                  <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner3-desktop.png"
+                    alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+                  <div class="carousel-caption position-absolute posicao">
+                    <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
+                    <p class="fs-4">Alto impacto visual, baixo impacto ambiental!</p>
+                  </div>
                 </div>
-            </div>
+              </div>
+            
             <button
                 class="carousel-control-prev"
                 type="button"
